--- a/HashCode 2021 Qualification/Readme
+++ b/HashCode 2021 Qualification/Readme
@@ -12,4 +12,4 @@ F: 1,413,563
 
 We got 9,590,687 in total. I think the test F and E can be improved greatly more since both of them only have 83% cars end their road on time.
 
-In conclusion, although our score was not very high but we did have a lot of fun together. HashCode is really an interesting competition!
+In conclusion, although our score was not very high and not qualified for the final round, we did have a lot of fun together. HashCode is really an interesting competition!
